--- a/index.html
+++ b/index.html
@@ -53,12 +53,19 @@
         <input type="button" id="admin" value="관리자">
       </div>
       <div id="admin-box">
-        <label for="add-food">음식</label>
-        <input type="text" id="add-food">
-        <label for="add-name">이름</label>
-        <input type="text" id="add-name">
-        <label for="add-price">가격</label>
-        <input type="text" id="add-price">
+        <div class="admin-text">
+          <label for="add-food">음식</label>
+          <input type="text" id="add-food">
+          <label for="add-name">이름</label>
+          <input type="text" id="add-name">
+          <label for="add-price">가격</label>
+          <input type="text" id="add-price">
+        </div>
+        <div class="admin-button">
+          <input type="button" id="add" value="추가">
+          <input type="button" id="del" value="삭제">
+        </div>
+
       </div>
     </div>
   </div>
