--- a/index.html
+++ b/index.html
@@ -13,31 +13,31 @@
 
   <div id="root">
     <ul id="choice-box">
-      <li class="item" data-item="1">
+      <li class="item">
         <label>🍗</label>
         <label>치킨</label>
         <label>10000원</label>
         <label>1</label>
       </li>
-      <li class="item" data-item="2">
+      <li class="item">
         <label>🍕</label>
         <label>피자</label>
         <label>8000원</label>
         <label>2</label>
       </li>
-      <li class="item" data-item="3">
+      <li class="item">
         <label>🥪</label>
         <label>샌드위치</label>
         <label>4000원</label>
         <label>3</label>
       </li>
-      <li class="item" data-item="4">
+      <li class="item">
         <label>🍣</label>
         <label>초밥</label>
         <label>2000원</label>
         <label>4</label>
       </li>
-      <li class="item" data-item="5">
+      <li class="item">
         <label>🍔</label>
         <label>햄버거</label>
         <label>5000원</label>
@@ -63,6 +63,8 @@
         </div>
         <div class="admin-button">
           <input type="button" id="add" value="추가">
+          <label for="del-item">삭제</label>
+          <input type="text" id="del-item">
           <input type="button" id="del" value="삭제">
         </div>
 
