--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div id="payment-box">
         <label for="price-text">음식<br>자판기</label>
         <input type="text" id="price-text" placeholder="금액을 입력해주세요.">
-        <label id="total">계산할 금액 : </label>
+        <label id="total">계산할 금액 : 0원</label>
         <input type="submit" id="draw" value="뽑기">
         <input type="button" id="admin" value="관리자">
       </div>
