--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <label>5</label>
       </li>
     </ul>
-    <div>
+    <div id="process-box">
       <div id="payment-box">
         <label for="price-text">음식<br>자판기</label>
         <input type="text" id="price-text" placeholder="금액을 입력해주세요.">
