--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </ul>
     <div id="process-box">
       <div id="payment-box">
-        <label for="price-text">음식<br>자판기</label>
+        <label for="price-text">무엇을 뽑으시겠습니까?</label>
         <input type="text" id="price-text" placeholder="금액을 입력해주세요.">
         <label id="total">계산할 금액 : 0원</label>
         <input type="submit" id="draw" value="뽑기">
