--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./css/main.css" rel="stylesheet" type="text/css" />
-  <script src="./js/main.js" defer></script>
+  <link href="./css/style.css" rel="stylesheet" type="text/css" />
+  <script src="./js/script.js" defer></script>
   <title>자판기</title>
 </head>
 
